--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "http://brian7650.github.io/circletree/",
   "name": "form",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,5 +17,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
